--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -1,5 +1,5 @@
 <html>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
@@ -11,6 +11,7 @@
 <nav>
 <a href="./index.html">[About Me]</a>
 <a href="./papers.html">[Papers]</a>
+<a href="./talks.html">[Talks]</a>
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
@@ -31,20 +32,20 @@ From 01/01/2021-31/12/2025 I am the PI of ERC Starting Grant project UBIQGAP (gr
 <br>
 <center><b>`The ubiquity of optimal spectral gaps'</b></center>
 <br>
-
-<div class="collapsible">
-[Click for an abridged abstract] 
 </div>
-<div class="optc">
-<i>
+
+<div class="optw">
+<code>
+ABRIDGED ABSTRACT.</br> 
 Spectral gap is a fundamental concept in mathematics, physics, and computer science as it governs the exponential rate at which a process converges towards its stationary state. It informs the spectral lines of hydrogen, how we shuffle cards, the behavior of semiconductors, and web search algorithms. <br>
 Moreover, some of the most prominent issues of contemporary mathematics, including the Ramanujan-Petersson conjecture and the Yang-Mills mass gap, revolve around spectral gap. This proposal seeks to investigate the nature of the spectral gap for hyperbolic surfaces and unitary representations of fundamental groups of surfaces. <br>
 In the former case, the spectral gap occurs in the spectrum of the Laplace-Beltrami operator on the surface, and in the latter, it occurs in the spectrum of a Hecke operator attached to the representation. The two main motifs of the proposal are ubiquity and optimality. Is the spectral gap ubiquitous? Does it exist for random surfaces and random representations? Is it easy to construct surfaces with a large spectral gap? In what cases can one prove that the spectral gap is close to optimal? The sharpest and most ambitious questions discussed in this proposal combine these two aspects and ask whether objects with (almost) optimal spectral gap appear with high frequency. <br>
 A main technical tool is the development of new formulas for integration over representation varieties of fundamental groups of surfaces. 
 These integral formulas are of high independent interest. For example, I propose to establish estimates that extend important results 
 in Voiculescu's Free Probability Theory from the context of free groups, to fundamental groups of closed compact surfaces, and beyond. 
-</i>
+</code>
 </div>
+<div class="optw"> 
 <br>
 <u><b>Team members</b></u><br>
 <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> (PDRA)
@@ -67,10 +68,32 @@ Anitej Banerjee (Ph.D. Student)<br>
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated Dec 2024]</u></th>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated May 2025]</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://arxiv.org/abs/2504.08988"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong convergence of uniformly random permutation representations of surface groups</b>  
+Magee,  <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
+<br>
+Preprint
+</tr>
+
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong convergence of unitary and permutation representations of discrete groups</b>  Michael Magee
+<br>
+A survey article
+</tr>	
 <tr >
 <td>
 </td>
@@ -81,7 +104,17 @@ Anitej Banerjee (Ph.D. Student)<br>
 </b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
 <br>Preprint
 </td>	
-</tr>	
+</tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2412.13941"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Random permutations acting on \(k\)-tuples have near-optimal spectral gap for \( k=\mathrm{poly}(n) \).</b> Ewan Cassidy
+<br>
+Preprint
+</tr>		
 <tr >
 <td>
 </td>
@@ -162,18 +195,21 @@ Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camac
 <u>Journal of the European Mathematical Society</u>, to appear.
 </tr>
 
-<tr >
+<tr>
 <td>
+<a href="https://doi.org/10.1016/j.jfa.2024.110803"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strongly convergent unitary representations of limit groups.</b>  
-Michael Magee and <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder</a> <br>
-Preprint, contains an appendix by <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and Michael Magee
-</b>
+ (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
+ 
 <br>
+<u>Journal of Functional Analysis</u>, 2025.  Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
 </tr>
+
+
 <tr >
 <td>
 </td>
