--- a/cv.html
+++ b/cv.html
@@ -9,11 +9,13 @@
 <nav>
 <a href="./index.html">[About Me]</a>
 <a href="./papers.html">[Papers]</a>
+<a href="./talks.html">[Talks]</a>
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
 <a href="./DS_SG.html">[Conference `23]</a>
 </nav>
+
 
 <div class="optw"><b>BRIEF CV</b></div>
 
@@ -37,17 +39,8 @@ Ph.D. title: <i>Quantitative spectral gap for thin groups of hyperbolic isometri
 2014-2015 Member, I.A.S. Princeton<br>
 <br>
 </div>
-<div class="optw"><b>Most significant awards</b></div>
 
-<div class="optw">
-Philip Leverhulme Prize 2023<br>
-Von Neumann Fellowship IAS Princeton 2023-2024<br>
-LMS Whitehead Prize 2021 <br>
-ERC Starting grant 2020 UBIQGAP `The ubiquity of optimal spectral gaps'  1,437,000&#8364<br>
-NSF Standard grant 2017 `Thin counting in moduli spaces'  145,295&#36
 
-</div> 
-<br>
 <div class="optw">
 A full CV is available <a href="vita.pdf">[here]</a>.
 </div> 
