--- a/papers.html
+++ b/papers.html
@@ -9,6 +9,7 @@
 <nav>
 <a href="./index.html">[About Me]</a>
 <a href="./papers.html">[Papers]</a>
+<a href="./talks.html">[Talks]</a>
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
@@ -214,7 +215,6 @@ Submitted
 </b>
 <br>
 <u>Annals of Mathematics</u>, 2023.
-<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
 </td>	
 </tr>	
 <tr >	
@@ -352,7 +352,6 @@ spectral gap 3/16 - &#1013.
 <td><b>An asymptotic formula for integer points on Markoff-Hurwitz varieties. 
 </b> (With <a href="https://sites.google.com/site/alexandergamburd/">Alex Gamburd</a> and Ryan Ronan)
 <br><u>Annals of Mathematics</u>, 2019.
-<a href="https://www.youtube.com/watch?v=G5s6Wg7hEKI">[One hour talk]	</a> 
 </td>
 	
 </tr>
@@ -380,13 +379,7 @@ spectral gap 3/16 - &#1013.
 <td><b>Matrix group integrals, surfaces, and mapping class groups I: U(n). 
 </b>(With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br><u>Inventiones mathematicae</u>, 2019. 
-<em>Two 45 minute talks:</em> 
-<a href="https://www.youtube.com/watch?v=V-ODKmhZOFY&index=35&list=PL2z_z_KsbDvv6l4EcYhyocE_9W5MMkDDT">[Background]
-</a> 
-<a href="https://www.youtube.com/watch?v=bqq2dXKD4Ys&list=PL2z_z_KsbDvv6l4EcYhyocE_9W5MMkDDT&index=36">[Main results]
-</a>
 </td>
-		
 </tr>
 
 <tr>
