--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <nav>
 <a href="./index.html">[About Me]</a>
 <a href="./papers.html">[Papers]</a>
+<a href="./talks.html">[Talks]</a>
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
