--- a/seminar.html
+++ b/seminar.html
@@ -1,5 +1,5 @@
 <html>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
@@ -11,6 +11,7 @@
 <nav>
 <a href="./index.html">[About Me]</a>
 <a href="./papers.html">[Papers]</a>
+<a href="./talks.html">[Talks]</a>
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
