--- a/papers.html
+++ b/papers.html
@@ -115,7 +115,18 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-
+<tr >
+<td><a href="https://msp.org/gt/2025/29-3/p03.xhtml"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
+</b> 
+<br>
+<u>Geometry and Topology</u>, 2025.
+</td>	
+</tr>	
 <tr >
 <td>
 <a href="https://doi.org/10.4171/jems/1610"><img src="j_ico.png"title="Journal" width="100%"></a>
@@ -174,18 +185,7 @@ Submitted
 
 </td>	
 </tr>	
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>
-<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
-</b> 
-<br>
-<u>Geometry and Topology</u>, to appear.
-</td>	
-</tr>	
+
 
 <tr >
 <td><a href="https://doi.org/10.1017/fmp.2023.13"><img src="j_ico.png"title="Journal" width="100%"></a>
