--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -68,7 +68,7 @@ Anitej Banerjee (Ph.D. Student)<br>
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated May 2025]</u></th>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated May 2025] (M=Magee)</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
@@ -78,8 +78,8 @@ Anitej Banerjee (Ph.D. Student)<br>
 <td>
 <a href="https://arxiv.org/abs/2504.08988"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Strong convergence of uniformly random permutation representations of surface groups</b>  
-Magee,  <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
+<td><b>Strong convergence of uniformly random permutation representations of surface groups.</b>  
+M,  <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
 <br>
 Preprint
 </tr>
@@ -90,7 +90,7 @@ Preprint
 <td>
 <a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Strong convergence of unitary and permutation representations of discrete groups</b>  Michael Magee
+<td><b>Strong convergence of unitary and permutation representations of discrete groups.</b>  M
 <br>
 A survey article
 </tr>	
@@ -122,7 +122,7 @@ Preprint
 <a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strong asymptotic freeness of Haar unitaries in
-quasi-exponential dimensional representations.</b>  Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
+quasi-exponential dimensional representations.</b>  M and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
 <br>
 Preprint
 </tr>	
@@ -132,7 +132,7 @@ Preprint
 <td>
 <a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Spectral gap for random Schottky surfaces.</b>   Irving Calder&oacuten</a>, Michael Magee, and Fr&eacuted&eacuteric Naud.
+<td><b>Spectral gap for random Schottky surfaces.</b>   Irving Calder&oacuten</a>, M, and Fr&eacuted&eacuteric Naud.
 <br>
 Preprint
 </tr>
@@ -142,7 +142,7 @@ Preprint
 <td>
 <a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces.</b>  Michael Magee
+<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces.</b>  M
 <br>
 Preprint
 </tr>
@@ -155,7 +155,7 @@ Preprint
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field.</b>  
-Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
+M and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
 <br>
 <u>Comptes Rendus Mathématique</u>, 2024.
 </tr>	
@@ -166,7 +166,7 @@ Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikae
 <a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strongly convergent unitary representations of right-angled Artin groups.</b>  
-Michael Magee and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+M and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
 <br>
 Preprint
 </tr>
@@ -182,18 +182,19 @@ Preprint
 Preprint
 </td>	
 </tr>	
-
 <tr >
 <td>
+<a href="https://doi.org/10.4171/jems/1610"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \).</b>  
-Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>
+<a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and M
 <br>
-<u>Journal of the European Mathematical Society</u>, to appear.
+<u>Journal of the European Mathematical Society</u>, 2025.
 </tr>
+
 
 <tr>
 <td>
@@ -203,7 +204,7 @@ Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camac
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strongly convergent unitary representations of limit groups.</b>  
- (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
+<a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder</a> and M
  
 <br>
 <u>Journal of Functional Analysis</u>, 2025.  Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
@@ -223,13 +224,14 @@ Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camac
 </tr>	
 <tr >
 <td>
+<a href="https://doi.org/10.4171/cmh/588"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2209.15568"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Short geodesics and small eigenvalues on random hyperbolic punctured spheres.
 </b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
-<br><u>Commentarii Mathematici Helvetici</u>, to appear.
+<br><u>Commentarii Mathematici Helvetici</u>, 2025.
 </td>	
 </tr>	
 <tr >
@@ -241,7 +243,7 @@ Michael Magee and <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camac
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
-Michael Magee, <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>, and <a href="https://yufeizhao.com/">Yufei Zhao</a><br>
+M, <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>, and <a href="https://yufeizhao.com/">Yufei Zhao</a><br>
 <u>Communications in Mathematical Physics</u>, 2023.
 </b>
 <br>
@@ -256,7 +258,7 @@ Michael Magee, <a href="https://sites.google.com/view/joe-thomas/home">Joe Thoma
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
-Michael Magee and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>
+M and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>
 <br>
 Preprint
 </td>	
@@ -273,7 +275,7 @@ Preprint
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>The asymptotic statistics of random covering surfaces.
-</b>Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
+</b>M and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br>
 <u>Forum of Mathematics, Pi</u>, 2023.
 </td>	
@@ -287,7 +289,7 @@ Preprint
 <a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
-Michael Magee and <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
+<a href="https://sites.google.com/view/will-hide/home">Will Hide</a> and M
 </b>
 <br>
 <u>Annals of Mathematics</u>, 2023.
@@ -305,7 +307,7 @@ Michael Magee and <a href="https://sites.google.com/view/will-hide/home">Will Hi
 </td>
 <td><b>A random cover of a compact hyperbolic surface has relative
 spectral gap 3/16 - &#1013.
-</b> Michael Magee, <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>, and 
+</b> M, <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>, and 
 <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br>
 <u>Geometric and Functional Analysis (GAFA)</u>, 2022.
@@ -319,21 +321,21 @@ spectral gap 3/16 - &#1013.
 <a href="https://arxiv.org/abs/2108.00717"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Core surfaces.
-</b> Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
+</b> M and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br><u>Geometriae Dedicata</u>, 2022.
 </td>	
 </tr>
-
+</tr>
 <tr >
-<td>
+<td><a href="https://msp.org/gt/2025/29-3/p03.xhtml"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Random Unitary Representations of Surface Groups II: The large n limit.
-</b> Michael Magee
+</b> M
 <br>
-<u>Geometry and Topology</u>, to appear.
+<u>Geometry and Topology</u>, 2025.
 </td>	
 </tr>	
 	
@@ -344,7 +346,7 @@ spectral gap 3/16 - &#1013.
 <a href="https://arxiv.org/abs/2101.00252"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Random Unitary Representations of Surface Groups I: Asymptotic expansions.
-</b> Michael Magee
+</b> M
 <br>
 <u>Communications in Mathematical Physics</u>, 2022.
 </td>	
