--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ Anitej Banerjee (2022-2026)
 
 
 </div> 
+<script type="text/javascript" src="https://counter.websiteout.com/js/21/6/0/0"></script>
 
 </center>
 </body>
