--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@ Anitej Banerjee (2022-2026)
 </div> 
 
 
+
 </div> 
-<script type="text/javascript" src="https://counter.websiteout.com/js/21/6/0/0"></script>
+
+
+<div class="showhim">&nbsp
+  <div class="showme"><script type="text/javascript" src="https://counter.websiteout.com/js/21/6/0/0"></script></div>
+</div>
 
 </center>
 </body>
