--- a/index.html
+++ b/index.html
@@ -26,22 +26,10 @@
 <img src="port4.png" width="70%"></img>
    
 <br>
-<div class="optw"><b>NEWS</b></div>  
-<div class="optw">
-With  <a href="https://sites.google.com/site/urbanjezernik/">Urban Jezernik</a> and <a href="https://users.fmf.uni-lj.si/kostenko/">Aleksey Kostenko</a> we are organizing <br>
-<a href="https://sites.google.com/view/spectralgaps2025/">Spectral Gaps 2025</a> in Portorož, Slovenia (8 - 12 September 2025). <br>
-This is a sequel to <a href="./DS_SG.html">Spectral Gaps 2023</a>.<br>
-*REGISTRATION OPEN*
-</div>
+
 <div class="optw"><b>About me</b></div>
 
-<div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>.  <br>
-Right now, I am thinking about (in no particular order) <br>
-unitary and permutation representations of discrete groups (strong convergence thereof)<br>
-the representation theory of symmetric groups<br>
-hyperbolic 2 and 3-manifolds and their spectral gaps<br>
-a variety of topics related to the reduced C*-algebras of groups.<br>
-I am from Northern Ireland. </br>
+<div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>. I am from Northern Ireland.  <br>
 
 
 </div> 
@@ -59,7 +47,7 @@ I am from Northern Ireland. </br>
 <div class="optw"><b>Current PhD students</b></div>
 <div class="optw">
 
-<a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
+<a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Word maps, random permutations and random graphs</i><br>
 Anitej Banerjee (2022-2026)
 </div> 
 <div class="optw"><b>Current postdocs</b></div>
