--- a/papers.html
+++ b/papers.html
@@ -46,16 +46,6 @@ Submitted.
 </tr>
 
 <tr >
-<td> 
-</td>
-<td>
-<a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td><b>Strong convergence of unitary and permutation representations of discrete groups</b>  
-<br>
-A survey article, written for proceedings ECM (Sevilla). 
-</tr>	
-<tr >
 <td>
 </td>
 <td>
@@ -87,20 +77,7 @@ Submitted.
 <br>
 Submitted.
 </tr>
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td><b>Strongly convergent unitary representations of right-angled Artin groups</b>  
- (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
-<br>
-Submitted
-</tr>
 
-
-	
 
 	
 
@@ -115,6 +92,29 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong convergence of unitary and permutation representations of discrete groups.</b>  
+<br>
+<u>Proceedings 9ECM</u>, to appear.
+</tr>	
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strongly convergent unitary representations of right-angled Artin groups.</b>  
+ (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
+<br>
+<u>Duke Mathematical Journal</u>, to appear.
+</tr>
+
 <tr >
 <td><a href="https://msp.org/gt/2025/29-3/p03.xhtml"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
@@ -134,7 +134,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
+<td><b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \).</b>  
  (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
 <br>
 <u>Journal of the European Mathematical Society</u>, 2025.
@@ -164,7 +164,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
+<td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field.</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
 <u>Comptes Rendus Mathématique</u>, 2024. 
