--- a/papers.html
+++ b/papers.html
@@ -39,7 +39,7 @@
 <td>
 <a href="https://arxiv.org/abs/2504.08988"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Strong convergence of uniformly random permutation representations of surface groups</b>  
+<td><b>Strong convergence of uniformly random permutation representations of surface groups.</b>  
 (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
 <br>
 Submitted.
@@ -52,7 +52,7 @@ Submitted.
 <a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strong asymptotic freeness of Haar unitaries in
-quasi-exponential dimensional representations</b>  
+quasi-exponential dimensional representations.</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
 Submitted.
@@ -63,7 +63,7 @@ Submitted.
 <td>
 <a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>Spectral gap for random Schottky surfaces</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<td><b>Spectral gap for random Schottky surfaces.</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted.
 </tr>
@@ -73,7 +73,7 @@ Submitted.
 <td>
 <a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
+<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces.</b>  
 <br>
 Submitted.
 </tr>
