--- a/talks.html
+++ b/talks.html
@@ -37,6 +37,17 @@
 <td> 
 </td>
 <td>
+<a href="https://www.youtube.com/watch?v=a7BVL1MOCl4">LINK</a> 
+</td>
+<td><b>Popularization on Markoff-Hurwitz equation (Numberphile)</b>
+<br>
+
+</tr>
+
+<tr >
+<td> 
+</td>
+<td>
 <a href="https://www.youtube.com/watch?v=9CbQ1Y46BGY">LINK</a> 
 </td>
 <td><b>Optimal spectral gaps</b>
