--- a/papers.html
+++ b/papers.html
@@ -32,7 +32,17 @@
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://arxiv.org/abs/2508.17332"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Eigenvalues of maximal abelian covers.</b>  
+(With Wenbo Li, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
+<br>
+Submitted.
+</tr>
 <tr >
 <td> 
 </td>
