--- a/papers.html
+++ b/papers.html
@@ -52,7 +52,7 @@ Submitted.
 <td><b>Strong convergence of uniformly random permutation representations of surface groups.</b>  
 (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
 <br>
-Submitted.
+&nbsp
 </tr>
 
 <tr >
@@ -500,3 +500,4 @@ This is superseded by the paper `Spectral gap for random Schottky surfaces' whic
 	
 </body>
 </html>
+
