--- a/papers.html
+++ b/papers.html
@@ -41,7 +41,7 @@
 <td><b>Eigenvalues of maximal abelian covers.</b>  
 (With Wenbo Li, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
-&nbsp
+Submitted.
 
 </tr>
 <tr >
@@ -501,5 +501,6 @@ This is superseded by the paper `Spectral gap for random Schottky surfaces' whic
 	
 </body>
 </html>
+
 
 
