--- a/papers.html
+++ b/papers.html
@@ -13,7 +13,9 @@
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
-<a href="./DS_SG.html">[Conference `23]</a>
+Conference:
+<a href="./DS_SG.html">[23]</a>
+<a href="https://sites.google.com/view/spectralgaps2025/">[25]</a>
 </nav>
 </center>
 <body id="top">
@@ -42,7 +44,6 @@
 (With Wenbo Li, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
 Submitted.
-
 </tr>
 <tr >
 <td> 
@@ -501,6 +502,3 @@ This is superseded by the paper `Spectral gap for random Schottky surfaces' whic
 	
 </body>
 </html>
-
-
-
