--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,9 @@
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
-<a href="./DS_SG.html">[Conference `23]</a>
+Conference:
+<a href="./DS_SG.html">[23]</a>
+<a href="https://sites.google.com/view/spectralgaps2025/">[25]</a>
 </nav>
 
 
