--- a/talks.html
+++ b/talks.html
@@ -13,7 +13,9 @@
 <a href="./cv.html">[CV]</a>
 <a href="./UBIQGAP.html">[ERC]</a>
 <a href="./seminar.html">[Seminar]</a>
-<a href="./DS_SG.html">[Conference `23]</a>
+Conference:
+<a href="./DS_SG.html">[23]</a>
+<a href="https://sites.google.com/view/spectralgaps2025/">[25]</a>
 </nav>
 </center>
 <body id="top">
@@ -37,7 +39,18 @@
 <td> 
 </td>
 <td>
-<a href="https://www.youtube.com/watch?v=a7BVL1MOCl4">LINK</a> 
+<a href="https://www.youtube.com/watch?v=gCc0msc6qFo">[LINK]</a> 
+</td>
+<td><b>Talk on PMatF/PPermF research program</b>
+<br>
+
+</tr>
+
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://www.youtube.com/watch?v=a7BVL1MOCl4">[LINK]</a> 
 </td>
 <td><b>Popularization on Markoff-Hurwitz equation (Numberphile)</b>
 <br>
@@ -48,7 +61,7 @@
 <td> 
 </td>
 <td>
-<a href="https://www.youtube.com/watch?v=9CbQ1Y46BGY">LINK</a> 
+<a href="https://www.youtube.com/watch?v=9CbQ1Y46BGY">[LINK]</a> 
 </td>
 <td><b>Optimal spectral gaps</b>
 <br>
@@ -57,7 +70,7 @@
 <td> 
 </td>
 <td>
-<a href="https://www.youtube.com/watch?v=tWnU-uVruvI">LINK</a> 
+<a href="https://www.youtube.com/watch?v=tWnU-uVruvI">[LINK]</a> 
 </td>
 <td><b>Convergence of Unitary Representations and Spectral Gaps of Manifolds</b> 
 <br>
@@ -72,7 +85,7 @@
 <td> 
 </td>
 <td>
-<a href="https://www.youtube.com/watch?v=DEPQf675nXw">LINK</a> 
+<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[LINK]</a> 
 </td>
 <td><b>The maximal spectral gap of a hyperbolic surface </b>
 <br>
@@ -81,7 +94,7 @@
 <td> 
 </td>
 <td>
-<a href="https://www.youtube.com/watch?v=DDLe1AqBM-Y">LINK</a> 
+<a href="https://www.youtube.com/watch?v=DDLe1AqBM-Y">[LINK]</a> 
 </td>
 <td><b>Thermodynamical formalism and Markoff-Hurwitz equations</b>
 <br>
