--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@ Conference:
 
 <div class="optw"><b>Current PhD students</b></div>
 <div class="optw">
-Anitej Banerjee (2022-2026)
+Anitej Banerjee (2022-2026) Topic: <i>Hyperoctahedral representations of surface groups</i>
 </div> 
-<div class="optw"><b>Current postdocs</b></div>
-<div class="optw">
-<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
-<br>
-<div class="optw"><b>Past postdocs</b></div>
-<a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> 
+
+<div class="optw"><b>Past postdocs</b><br>
+<a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> <br>
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> (Now Leverhulme ECF at Durham)
+</div>
 <div class="optw"><b>Completed PhD students</b></div>
 <div class="optw">
 <a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Word maps, random permutations and random graphs</i><br>
