--- a/papers.html
+++ b/papers.html
@@ -41,7 +41,7 @@ Conference:
 <a href="https://arxiv.org/abs/2508.17332"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Eigenvalues of maximal abelian covers.</b>  
-(With Wenbo Li, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
+(With Wenbo Li, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a>, and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
 Submitted.
 </tr>
@@ -57,18 +57,7 @@ Submitted.
 Submitted.
 </tr>
 
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td><b>Strong asymptotic freeness of Haar unitaries in
-quasi-exponential dimensional representations.</b>  
- (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
-<br>
-Submitted.
-</tr>	
+
 <tr >
 <td>
 </td>
@@ -104,6 +93,18 @@ Submitted.
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong asymptotic freeness of Haar unitaries in
+quasi-exponential dimensional representations.</b>  
+ (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
+<br>
+<u>Geometric and Functional Analysis (GAFA)</u>, to appear.
+</tr>	
 
 <tr >
 <td> 
