--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -70,9 +70,19 @@ Anitej Banerjee (Ph.D. Student)<br>
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated May 2025] (M=Magee)</u></th>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated Nov 2025] (M=Magee)</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
+</tr>
+<tr >
+<td> 
+</td>
+<td>
+<a href="https://arxiv.org/abs/2508.17332"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Eigenvalues of maximal abelian covers.</b> Wenbo Li, M, <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a>, and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+<br>
+Preprint
 </tr>
 <tr >
 <td> 
@@ -81,7 +91,7 @@ Anitej Banerjee (Ph.D. Student)<br>
 <a href="https://arxiv.org/abs/2504.08988"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Strong convergence of uniformly random permutation representations of surface groups.</b>  
-M,  <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
+M,  <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>
 <br>
 Preprint
 </tr>
@@ -94,7 +104,7 @@ Preprint
 </td>
 <td><b>Strong convergence of unitary and permutation representations of discrete groups.</b>  M
 <br>
-A survey article
+<u>Proceedings 9ECM</u>, to appear.
 </tr>	
 <tr >
 <td>
@@ -126,7 +136,7 @@ Preprint
 <td><b>Strong asymptotic freeness of Haar unitaries in
 quasi-exponential dimensional representations.</b>  M and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
 <br>
-Preprint
+<u>GAFA  (Geometric and Functional Analysis)</u>, to appear.
 </tr>	
 <tr >
 <td>
@@ -170,7 +180,7 @@ M and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Sall
 <td><b>Strongly convergent unitary representations of right-angled Artin groups.</b>  
 M and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
 <br>
-Preprint
+<u>Duke Mathematical Journal</u>, to appear.
 </tr>
 <tr >
 <td>
@@ -221,7 +231,7 @@ Preprint
 </td>
 <td><b>Large-n asymptotics for Weil-Petersson volumes of moduli spaces of bordered hyperbolic surfaces.
 </b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
-<br>Preprint
+<br><u>Communications in Mathematical Physics</u>, 2025.
 </td>	
 </tr>	
 <tr >
