--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@ Conference:
 <img src="port4.png" width="70%"></img>
    
 <br>
+<div class="optw"><b>NEWS</b></div>
+
+<div class="optw"> ***ERC funded PhD positions are now available with me*** <a href="./CONUREP.html">[Details]<br>
+
+
+
 
 <div class="optw"><b>About me</b></div>
 
