--- a/CONUREP.html
+++ b/CONUREP.html
@@ -36,11 +36,13 @@ I am currently seeking PhD students to work on topics of the project<br>
 <br>
 </div>
 <div class="optw">
-Positions are fully funded for four years with generous travel allowance. <br>
-Research questions of this project involve subsets of Group Theory, Operator Algebras, Spectral Geometry, and Random Matrix Theory.
+Positions are fully funded for four years with generous travel allowance<br>
+and set to <b>commence October 2026</b>.<br>
+Research questions of this project involve subsets of Group Theory, Operator Algebras, Spectral Geometry, and Random Matrix Theory (very much including study of random permutations).
 <br>
-If you are interested in working with me, please get in touch.
+If you are interested in working with me, please get in touch, ideally by <b>end of January 2026</b>
 </div>
+<br>
 <div class="optw">
 <code>
 ABRIDGED ABSTRACT.</br> 
