--- a/papers.html
+++ b/papers.html
@@ -62,16 +62,6 @@ Submitted.
 <td>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td><b>Spectral gap for random Schottky surfaces.</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
-<br>
-Submitted.
-</tr>
-<tr >
-<td>
-</td>
-<td>
 <a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces.</b>  
@@ -92,6 +82,17 @@ Submitted.
 <tr >    <th colspan="3", text-align="center"><u>Publications</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
+</tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Spectral gap for random Schottky surfaces.</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<br>
+<u>Analysis & PDE</u>, to appear.
 </tr>
 <tr >
 <td>
