--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Conference:
 <div> <b>Michael Magee</b> </div>
 
 
-<img src="port4.png" width="70%"></img>
+<img src="port4.png" width="80%"></img>
    
 <br>
 <div class="optw"><b>NEWS</b></div>
@@ -38,6 +38,7 @@ Conference:
 <div class="optw"><b>About me</b></div>
 
 <div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>. I am from Northern Ireland.  <br>
+From February 2026 I am joint managing editor (with Jason Miller) of Forum of Mathematics <a href="https://www.cambridge.org/core/journals/forum-of-mathematics-pi">Pi</a> and <a href="https://www.cambridge.org/core/journals/forum-of-mathematics-sigma">Sigma</a>.
 
 
 </div> 
