--- a/papers.html
+++ b/papers.html
@@ -96,6 +96,7 @@ Submitted.
 </tr>
 <tr >
 <td>
+<a href="https://doi.org/10.1007/s00039-026-00730-8"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
@@ -104,7 +105,7 @@ Submitted.
 quasi-exponential dimensional representations.</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
-<u>Geometric and Functional Analysis (GAFA)</u>, to appear.
+<u>Geometric and Functional Analysis (GAFA)</u>, 2026.
 </tr>	
 
 <tr >
